--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ APP_STORAGE_BUCKET = flyers-desk.appspot.com
 APP_MESSAGING_SENDER = 539570783130
 APP_APP_ID = 1:539570783130:web:06a0c958a2667c3a0d7023
 APP_MEASUREMENT_ID = G-FZKMNL4EE1
+APP_MICROSOFT_TENANT_ID = e9e01aeb-0714-4b1b-a24a-7b3ce93f54c4
