--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
+    "redux-persist": "^6.0.0",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
