--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "redux-persist": "^6.0.0",
