--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.0.7",
-    "react-router-dom": "^6.11.2",
-    "redux-persist": "^6.0.0",
-    "universal-cookie": "^4.0.4"
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
